@@ -1,2 +1,35 @@
 # service1
 Spring Boot service1
+
+# Apache Ignite com Open JDK 17
+
+{
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "type": "java",
+            "name": "Service1Application",
+            "request": "launch",
+            "mainClass": "br.com.cannoni.service1.Service1Application",
+            "projectName": "service1",
+            "vmArgs": [
+                "-Dspring.profiles.active=local",
+                "--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED",
+                "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
+                "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+                "--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED",
+                "--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED",
+                "--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED",
+                "--add-opens=java.base/java.io=ALL-UNNAMED",
+                "--add-opens=java.base/java.nio=ALL-UNNAMED",
+                "--add-opens=java.base/java.util=ALL-UNNAMED",
+                "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+                "--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED",
+                "--add-opens=java.base/java.lang=ALL-UNNAMED"
+            ]
+        }
+    ]
+}
